--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
-= XYZ Reader Starter Code
+The goal of this project is to transform/estabish the XYZ Reader application to conform to material design guidelines and rules. 
 
-This repository stores the starter code for the XYZ Reader project in Udacity's Android Nanodegree.
+
